# dblp_circuit

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: graph.input
lib/: CMakeLists.txt  libgtest_main.la
script/: author_hash.pl  cal_all_auth.sh  cal_author_conf.pl  cal_damping.pl  cal_influence.pl  cal_weight.pl  create_sample_damp.pl  disp_authority.pl  disp_coauthor.pl  ext_conf_name.pl  extract.pl  extract.rb  preprocess_data.sh  readme  valid_author_map.pl
src/: CMakeLists.txt  compute.cpp  compute.h  graph.cpp  graph.h  helper.cpp  helper.h  influence.cpp  influence.h  util.cpp  util.h
test/: CMakeLists.txt  test_graph.cpp  test_helper.cpp  test_influence.cpp  test_util.cpp
